--- a/package.json
+++ b/package.json
@@ -13,15 +13,21 @@
   "type": "commonjs",
   "description": "",
   "dependencies": {
+    "@types/multer": "^1.4.12",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
     "pdfkit": "^0.16.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^22.13.1",
     "@types/pdfkit": "^0.13.9",
     "nodemon": "^3.1.9",
