--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,21 +2,19 @@
   "compilerOptions": {
     "target": "es2017",
     "module": "commonjs",
+    "lib": ["es2017"],
     "outDir": "./dist",
     "rootDir": "./src",
+    "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "noImplicitAny": false,
-    "strict": false,
-    "allowJs": true,
-    "checkJs": false,
+    "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "baseUrl": ".",
     "paths": {
       "*": ["node_modules/*", "src/types/*"]
-    },
-    "typeRoots": ["./node_modules/@types", "./src/types"]
+    }
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
