--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node dist/app.js",
     "dev": "nodemon --exec ts-node src/app.ts",
-    "build": "tsc --skipLibCheck --noEmitOnError false",
+    "build": "tsc",
     "postinstall": "npm run build"
   },
   "keywords": [],
