--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,11 +11,13 @@
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "baseUrl": ".",
+    "baseUrl": "./",
     "paths": {
       "*": ["node_modules/*", "src/types/*"]
-    }
+    },
+    "declaration": true, // Gera arquivos de declaração .d.ts para compatibilidade
+    "allowSyntheticDefaultImports": true // Permite importar pacotes como em ES6
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "dist"]
 }
