--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "description": "",
   "dependencies": {
     "@types/multer": "^1.4.12",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -25,6 +26,7 @@
     "pdfkit": "^0.16.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
@@ -39,4 +41,3 @@
     "node": ">=14.0.0"
   }
 }
-
